<resources>
    <string name="app_name">artisell</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="hint_name">Product Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="textview_image_from_camera">From Camera</string>
    <string name="textview_image_from_gallery">From Gallery</string>
    <string name="sample_form_text2">This is a demonstration of blocking the next step until an action is taken</string>
    <string name="sample_form_checkbox">Check here to enable the next step</string>
    <string name="title_activity_navigation_grid">NavigationGrid</string>
    <string name="title_activity_view_product">My Products</string>
    <string name="hint_phone">Mobile number</string>
    <string name="hint_password">One time password (OTP)</string>
    <string name="title_add_product_1">1. Select Category</string>
    <string name="title_add_product_2">2. Enter Produce Name</string>
    <string name="title_add_product_3">3. Upload Image</string>
    <string name="title_add_product_4">4. Add Price and Quantity</string>
    <string name="artisan">Artisans</string>
    <string name="login">Log in</string>
    <string name="no_product_empty_text">You have not uploaded any products yet!</string>

    <string name="description_select_category">Please select which type of product you are going to sell by tapping any one image from below list!</string>
    <string name="description_upload_image">Please upload a photo of your product either from camera or from image gallery!</string>
    <string name="description_add_name">Please give your product a name. You can tap the icon on bottom of the screen to say the name instead of typing it!</string>
    <string name="description_add_price">Please add the price in Rupees for your product and also how much quantity you have available of it!</string>

    <string name="home_button_1">View Products</string>
    <string name="home_button_2">New Product</string>
    <string name="home_button_4">My Profile</string>
    <string name="home_button_3">Language</string>
    <string name="home_button_5">Artisan Search</string>
    <string name="home_button_6">Event Search</string>
    <string name="home_button_7">Job search</string>
    <string name="home_button_8">Other</string>
    <string name="title_add_product_5">Product Preview</string>
    <string name="title_activity_product_detailed">ProductDetailedActivity</string>
    <string name="title_activity_artisan_search">Search Artisans</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_maps_activity_event">Events Nearby</string>
    <string name="hint_category">Category</string>
    <string name="title_activity_maps">Map</string>
    <string name="alert_leave_add_product">New product will not be saved. Are you sure you want to exit?</string>
    <string name="alert_title_confirm">Confirm exit</string>
    <string name="alert_positive_button">Ok</string>
    <string name="alert_negative_button">Cancel</string>
    <string name="title_activity_home">Artisell</string>
    <string name="subtitle_activity_home">Indian Culture Revisited</string>
    <string name="hint_home_help">Tap on any option from the list below!</string>
    <string name="title_activity_maps_activity_artisans">Map</string>
    <string name="action_done">save</string>
    <string name="title_activity_jobs_activity">Current Jobs</string>
    <string name="or">or</string>
    <string name="action_go_ahead">NEXT</string>
    <string name="action_go_back">BACK</string>

</resources>
