<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_add_price"
            android:layout_weight="0.2"
            android:textSize="20dp"
            />

        <FrameLayout
            android:id="@+id/say"
            android:layout_marginLeft="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_btn_speak_now"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="Price"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_product_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="20sp"
            app:met_baseColor="@color/app_primary"
            app:met_floatingLabel="none"
            app:met_floatingLabelText="@string/hint_price"
            app:met_primaryColor="@color/app_primary"
            app:met_underlineColor="@color/app_primary"/>

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="Quantity"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_product_quantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/hint_quantity"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="20sp"
            app:met_baseColor="@color/app_primary"
            app:met_floatingLabel="none"
            app:met_floatingLabelText="@string/hint_quantity"
            app:met_primaryColor="@color/app_primary"
            app:met_underlineColor="@color/app_primary"/>
    </LinearLayout>

</RelativeLayout>
