<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearview"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_upload_image"
            android:layout_weight="0.2"
            android:textSize="20dp"
            />

        <FrameLayout
            android:id="@+id/say"
            android:layout_marginLeft="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/listen"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_layout_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearview"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_add_image_from_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/textview_image_from_camera"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/iv_camera_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top|center"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_camera"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:gravity="top|center_horizontal"/>

        <LinearLayout
            android:id="@+id/layout_add_image_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/textview_image_from_gallery"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/iv_gallery_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top|center"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_search"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_layout_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/container_layout_menu"
        android:layout_alignLeft="@+id/container_layout_menu"
        android:layout_alignRight="@+id/container_layout_menu"
        android:layout_alignTop="@+id/container_layout_menu"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/quila"
            android:scaleType="centerCrop"/>

        <FrameLayout
            android:id="@+id/button_frame_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="0">

            <ImageButton
                android:id="@+id/closeImage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/signal_red"
                android:src="@drawable/abc_ic_clear_mtrl_alpha"/>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
